--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,5 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,17 +8,14 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  background: url(https://www.tosito.se/wp-content/uploads/2020/11/Tosito_Sjoviken_Exterior_Ovan_2011-web-1024x768.jpg);
+  background-position: center;
+  background-size: cover;
+  background-blend-mode: darken;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box {
+  padding: 1rem;
+  background-color: #282c34cc;
+  border-radius: 1rem;
 }
